--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/0x0P/lightvalley#readme",
   "dependencies": {
+    "@types/express": "^4.17.17",
     "express": "^4.18.2",
     "typescript": "^5.0.2"
   }
