--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/0x0P/lightvalley#readme",
   "dependencies": {
-    "@types/express": "^4.17.17",
     "express": "^4.18.2",
+    "pg": "^8.10.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/pg": "^8.6.6",
     "typescript": "^5.0.2"
   }
 }
