--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/0x0P/lightvalley#readme",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0"
   },
   "devDependencies": {
