--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
   },
   "homepage": "https://github.com/0x0P/lightvalley#readme",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/jsonwebtoken": "^9.0.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "knex": "^2.4.2",
     "pg": "^8.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/pg": "^8.6.6",
     "typescript": "^5.0.2"
   }
 }
